# llm-schema-mapping-benchmark

./: .gitignore  README.MD  pyproject.toml
docs/: benchmark_scope.md  current_state.md  mapping_plan_schema.md  public_ingest_pipeline.md  task_definition.md  validator_design.md
schemas/: benchmark_task_v1.schema.json  mapping_plan_v1.schema.json  model_run_record_v1.schema.json
scripts/: build_gamebus_tasks.py  build_public_tasks.py  check_gamebus_invariants.py  compare_expected_outputs.py  compare_model_runs.py  dev_run_one_task_ollama.py  execute_gamebus_gold_plan.py  generate_copy_rename_tasks.py  generate_join_tasks.py  generate_synthetic_tasks.py  generate_type_normalization_tasks.py  profile_gamebus_descriptor.py  promote_expected_outputs.py  report_task_set.py  run_gamebus_anchor_v1.py  run_task_set_ollama.py  run_task_set_ollama_multi.py  scaffold_tasks.py  score_model_run.py  validate_gamebus_tasks.py  validate_gold_plans.py  validate_one_task.py  validate_tasks.py
tests/: conftest.py  task_builder.py  test_artifact_presence.py  test_broken_plans.py  test_copy_rename_task_set.py  test_downstream_field_types.py  test_downstream_validator.py  test_execution_validator.py  test_filters.py  test_gb007_execution.py  test_grouped_execution.py  test_join_prompt_convention.py  test_join_task_set.py  test_mapping_plan_schema.py  test_model_run_scoring.py  test_operations.py  test_plan_repair.py  test_plan_repair_join.py  test_pub105_execution.py  test_pub106_execution.py  test_synthetic_task_set.py  test_task_loader.py  test_type_normalization_task_set.py  (+2 more)
(+321 files in other folders)
