[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lsmbench"
version = "0.1.0"
description = "Starter artifacts for a JSON-to-JSON LLM schema mapping benchmark"
requires-python = ">=3.11"

dependencies = [
  "jsonschema>=4.23.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
validate-one-task = "lsmbench.cli:main"